Tweak to the caller include test
- tweak environment
- tweak pass regexes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -679,7 +679,7 @@ omnitrace_add_test(
     REWRITE_FAIL_REGEX "0 instrumented loops in procedure transpose")
 
 omnitrace_add_test(
-    SKIP_BASELINE SKIP_PRELOAD SKIP_RUNTIME SKIP_SAMPLING
+    SKIP_PRELOAD SKIP_RUNTIME SKIP_SAMPLING
     NAME rewrite-caller
     TARGET rewrite-caller
     LABELS "caller-include"
@@ -694,9 +694,10 @@ omnitrace_add_test(
         --print-instrumented
         functions
     RUN_ARGS 17
-    ENVIRONMENT "${_test_library_path}"
+    ENVIRONMENT "${_base_environment};OMNITRACE_COUT_OUTPUT=ON"
+    BASELINE_PASS_REGEX "number of calls made = 17"
     REWRITE_PASS_REGEX "\\[function\\]\\[Forcing\\] caller-include-regex :: 'outer'"
-    REWRITE_RUN_PASS_REGEX "number of calls made = 17")
+    REWRITE_RUN_PASS_REGEX ">>> ._outer ([ \\|]+) 17")
 
 set(OMNITRACE_ROCM_EVENTS_TEST
     "GRBM_COUNT,GPUBusy,SQ_WAVES,SQ_INSTS_VALU,VALUInsts,TCC_HIT_sum,TA_TA_BUSY[0]:device=0,TA_TA_BUSY[11]:device=0"
